# G3Reg

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: boost.cmake  eigen.cmake  global_definition.cmake  glog.cmake  gtsam.cmake  igraph.cmake  openmp.cmake  pcl.cmake  yaml.cmake
configs/apollo_lc_bm/: fpfh_3dmac.yaml  fpfh_pagor.yaml  fpfh_quatro.yaml  fpfh_ransac.yaml  fpfh_teaser.yaml  gem_3dmac.yaml  gem_pagor.yaml  gem_quatro.yaml  gem_ransac.yaml  gem_teaser.yaml
configs/datasets/apollo_lc/: test_0_10.txt  test_10_20.txt  test_20_30.txt  test_30_40.txt
configs/datasets/hit_ms/: test_30m.txt
configs/datasets/kitti360_lc/: test_0_10.txt  test_10_20.txt  test_20_30.txt
configs/datasets/kitti_10m/: test_10.txt
configs/datasets/kitti_lc/: test_0_10.txt  test_10_20.txt  test_20_30.txt
configs/hit_ms/: fpfh_pagor.yaml  fpfh_teaser.yaml  gem_pagor.yaml  gem_teaser.yaml
configs/kitti360_lc_bm/: fpfh_3dmac.yaml  fpfh_pagor.yaml  fpfh_quatro.yaml  fpfh_ransac.yaml  fpfh_teaser.yaml  gem_3dmac.yaml  gem_pagor.yaml  gem_quatro.yaml  gem_ransac.yaml  gem_teaser.yaml
configs/kitti_lc_bm/: fpfh_3dmac.yaml  fpfh_pagor.yaml  fpfh_quatro.yaml  fpfh_ransac.yaml  fpfh_teaser.yaml  gem_3dmac.yaml  gem_pagor.yaml  gem_quatro.yaml  gem_ransac.yaml  gem_teaser.yaml
configs/sensors/horizon/: dcvc.yaml
configs/sensors/velodyne16/: plane.yaml  travel.yaml
configs/sensors/velodyne64/: dcvc.yaml  fpfh.yaml  plane.yaml  travel.yaml
docs/: benchmarks.md  chi2.md  demo.md  install.md
examples/: demo_reg.cpp  demo_seg.cpp  matching_bm.cpp  reg_bm.cpp
examples/data/livox/: source.pcd  target.pcd
examples/data/velodyne/: source.pcd  target.pcd
include/back_end/: reglib.h
include/datasets/: apollo_loader.h  dataloader.h  datasets_init.h  hit_loader.h  kitti360_loader.h  kitti_loader.h
include/front_end/: fcgf.h  fpfh_utils.h  graph_vertex.h
include/global_definition/: global_definition.h.in
include/utils/: config.h  evaluation.h  opt_utils.h
src/back_end/: reglib.cpp
src/front_end/: fcgf.cpp  fpfh_utils.cpp  graph_vertex.cpp
src/utils/: config.cpp  evaluation.cpp  opt_utils.cpp
(+31 files in other folders)
